--- a/views/templates/index.tmpl
+++ b/views/templates/index.tmpl
@@ -1,8 +1,14 @@
 <!doctype html>
 <html>
-<title>{{ .title }}}</title>
+<title>{{ .title }}</title>
 <link rel="stylesheet" href="static/dashboard.css">
 <body>
-{{ .content }}
+{{ .TotalMarketCapUsd }}
+{{ .Total24HVolumeUsd }}
+{{ .BitcoinPercentageOfMarketCap }}
+{{ .ActiveCurrencies }}
+{{ .ActiveAssets }}
+{{ .ActiveMarkets }}
+{{ .LastUpdated }}
 </body>
 </html>
