--- a/views/templates/login.tmpl
+++ b/views/templates/login.tmpl
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<title>{{ .title }}</title>
+<title>Login</title>
 <link rel="stylesheet" href="static/dashboard.css">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -15,7 +15,17 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <body>
 
-<h1>{{ .title }}</h1>
+{{ if .unauthorized }}
+<div class="alert alert-warning">
+    <strong>Invalid Login Details.</strong>
+</div>
+{{end}}
+{{ if .justregistered }}
+<div class="alert alert-success">
+    <strong>Successfully Registered.</strong>
+</div>
+{{ end }}
+<h1>Login</h1>
 <form action="authenticate" method="POST">
     Username:<br>
     <input type="text" name="username" id="username">
