started off data binding for global data

--- a/views/templates/dashboard.tmpl
+++ b/views/templates/dashboard.tmpl
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dashboard</title>
 </head>
 <body>
-
+Dashboard
+{{.TotalMarketCapUsd}}
+{{.Total24HVolumeUsd}}
+{{.BitcoinPercentageOfMarketCap}}
+{{.ActiveCurrencies}}
+{{.ActiveAssets}}
+{{.ActiveMarkets}}
+{{.LastUpdated}}
 </body>
 </html>
