--- a/views/templates/register.tmpl
+++ b/views/templates/register.tmpl
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <title>Register</title>
-<link rel="stylesheet" href="static/dashboard.css">
+<link rel="stylesheet" href="static/form.css">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
@@ -15,20 +15,22 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <body>
 
-{{ if .invalid }}
-<div class="alert alert-warning">
-    <strong>Invalid Details!</strong>
+<div class="container">
+    <form class="form-signin" action="register" method="POST">
+    {{ if .invalid }}
+        <div class="alert alert-warning">
+            <strong>Invalid Details!</strong>
+        </div>
+    {{ end }}
+        <h2 class="form-signin-heading">Register</h2>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="text" name="username" id="username" class="form-control" placeholder="Username" required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" name="password" id="password" class="form-control" placeholder="Password" required>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+    </form>
+
 </div>
-{{ end }}
-<h1>Register</h1>
-<form action="register" method="POST">
-    Username:<br>
-    <input type="text" name="username" id="username">
-    <br>
-    Password:<br>
-    <input type="password" name="password" id="password">
-    <input type="submit">
-</form>
 
 </body>
 </html>
