just messing around

--- a/views/templates/dashboard.tmpl
+++ b/views/templates/dashboard.tmpl
@@ -3,15 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <title>Dashboard</title>
+    <link rel="stylesheet" href="static/dashboard.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
 <body>
 Dashboard
-{{.TotalMarketCapUsd}}
-{{.Total24HVolumeUsd}}
-{{.BitcoinPercentageOfMarketCap}}
-{{.ActiveCurrencies}}
-{{.ActiveAssets}}
-{{.ActiveMarkets}}
-{{.LastUpdated}}
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    Total Market Cap: ${{.TotalMarketCapUsd}}
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    Daily Volume: ${{.Total24HVolumeUsd}}
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    BTC Dominance: {{.BitcoinPercentageOfMarketCap}}%
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                {{.ActiveCurrencies}} Active Currencies
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                {{.ActiveAssets}} Active Assets
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                {{.ActiveMarkets}} Active Markets
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+Last updated: {{.LastUpdated}}
 </body>
 </html>
