--- a/views/templates/dashboard.tmpl
+++ b/views/templates/dashboard.tmpl
@@ -18,7 +18,7 @@
 </head>
 <body>
 <div class="container">
-    Dashboard
+    <h3>Dashboard</h3>
     <div class="row">
         <div class="col">
             <div class="card">
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    Last updated: {{.LastUpdated}}
+    <div class="row"><div class="col">Last updated: {{.LastUpdated}}</div><div class="col">{{ .NumberOfEntries }} Entries</div></div>
 </div>
 </body>
 </html>
