--- a/views/templates/dashboard.tmpl
+++ b/views/templates/dashboard.tmpl
@@ -10,6 +10,10 @@
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+
+    <!-- Lambo library -->
+    <script src="static/lambo.js"></script>
+
     <!-- Popper JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
@@ -61,16 +65,36 @@
             <div class="card">
                 <div class="card-body">
                     Status: {{.MongoUpdateStatus}}<br>
-                    <button type="button" class="btn btn-primary btn-sm">Start</button>
-                    <button type="button" class="btn btn-secondary btn-sm">Pause</button>
+                    <form action="/dashboard/" method="POST">
+                        <button type="submit" class="btn btn-primary btn-sm" name="action" value="resume">Start</button>
+                    </form>
+                    <form action="/dashboard/" method="POST">
+                        <button type="submit" class="btn btn-secondary btn-sm" name="action" value="pause">Pause</button>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-
     <div class="row">
-        <div class="col">Last updated: {{.LastUpdated}}</div>
-        <div class="col">{{ .NumberOfEntries }} Entries</div>
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    Last updated: {{.LastUpdated}}
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-body">{{ .NumberOfEntries }} Entries
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-body">TODO HERE
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 </body>
