--- a/views/templates/dashboard.tmpl
+++ b/views/templates/dashboard.tmpl
@@ -69,7 +69,8 @@
                         <button type="submit" class="btn btn-primary btn-sm" name="action" value="resume">Start</button>
                     </form>
                     <form action="/dashboard/" method="POST">
-                        <button type="submit" class="btn btn-secondary btn-sm" name="action" value="pause">Pause</button>
+                        <button type="submit" class="btn btn-secondary btn-sm" name="action" value="pause">Pause
+                        </button>
                     </form>
                 </div>
             </div>
